# catalyst928.prototype.implement

./: .gitignore  CLAUDE.md  LICENSE  README.md  TODOS.md  skills-lock.json
app/CC/CC-server/: Dockerfile  a2a_client.py  a2a_flow.py  communication.py  main.py  order.py  pyproject.toml  ws_signal.py
app/CC/CC-server/src/: config.py
app/CC/CC-server/src/a2a_client/: client.py
app/CC/CC-server/src/communication/: agent.py  models.py
app/CC/CC-server/src/orchestration/: flow.py  order.py
app/CC/CC-server/src/ws/: messages.py  signaling.py
app/CC/CC-server/test/: test_communication.py  test_flow.py  test_order.py  test_signaling.py
app/CRM/CRM-server/: main.py  pyproject.toml
app/CRM/CRM-server/src/: config.py  db.py  seed.py
app/CRM/CRM-server/src/agents/: base.py
app/CRM/CRM-server/src/agents/ai_management/: agent.py  models.py
app/CRM/CRM-server/src/agents/ai_management/skills/: get_ai_model_status.py
app/CRM/CRM-server/src/agents/order/: agent.py  models.py
app/CRM/CRM-server/src/agents/order/skills/: create_order.py
app/CRM/CRM-server/src/agents/profiling/: agent.py  models.py
app/CRM/CRM-server/src/agents/profiling/skills/: query_customer.py  verify_identity.py
app/CRM/CRM-server/src/agents/recommendation/: agent.py  models.py
app/CRM/CRM-server/src/agents/recommendation/skills/: get_nbo.py
app/CRM/CRM-server/test/: conftest.py  helpers.py  test_agent_cards.py  test_ai_management.py  test_db.py  test_order.py  test_profiling.py  test_recommendation.py
docs/: gen_arch_diagram.py
openspec/: AGENTS.md  config.yaml  project.md
(+66 files in other folders)
